add: first version of excel parser, new methods for api, new dto refactor: dto