@@ -7,6 +7,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
+import java.util.stream.Collectors;
+
 @Component
 public class PlayerFactory implements DTOFactory<PlayerDTO, Player>{
 
@@ -20,6 +22,9 @@ public class PlayerFactory implements DTOFactory<PlayerDTO, Player>{
     @Lazy
     private TeamFactory teamFactory;
 
+    @Autowired
+    private TeamMainInfoFactory teamMainInfoFactory;
+
     public PlayerFactory() {
     }
 
@@ -30,9 +35,9 @@ public class PlayerFactory implements DTOFactory<PlayerDTO, Player>{
                 .patronymic(playerDTO.getPatronymic())
                 .surname(playerDTO.getSurname())
                 .university(playerDTO.getUniversity())
-                .teamsCompositions(playerDTO.getTeamsCompositions().stream().map(x->teamCompositionFactory.mapToEntity(x)).toList())
+                .teamsCompositions(playerDTO.getTeamsCompositions().stream().map(x -> teamCompositionFactory.mapToEntity(x)).collect(Collectors.toList()))
                 .dateOfBirth(playerDTO.getDateOfBirth())
-                .teams(playerDTO.getTeams().stream().map(x->teamFactory.mapToEntity(x)).toList())
+                .teams(playerDTO.getTeams().stream().map(x -> teamMainInfoFactory.mapToEntity(x)).collect(Collectors.toList()))
                 .build();
     }
 
@@ -43,32 +48,10 @@ public class PlayerFactory implements DTOFactory<PlayerDTO, Player>{
                 .patronymic(player.getPatronymic())
                 .surname(player.getSurname())
                 .university(player.getUniversity())
-                .teamsCompositions(player.getTeamsCompositions().stream().map(x->teamCompositionFactory.mapToDto(x)).toList())
+                .teamsCompositions(player.getTeamsCompositions().stream().map(x -> teamCompositionFactory.mapToDto(x)).collect(Collectors.toList()))
                 .dateOfBirth(player.getDateOfBirth())
                 .idSite(player.getIdSite())
-                .teams(player.getTeams().stream().map(x->teamFactory.mapToDto(x)).toList())
-                .build();
-    }
-
-    public Player mapToEntityWithoutTeams(PlayerDTO playerDTO) {
-        return Player.builder()
-                .id(playerDTO.getId())
-                .name(playerDTO.getName())
-                .patronymic(playerDTO.getPatronymic())
-                .surname(playerDTO.getSurname())
-                .university(playerDTO.getUniversity())
-                .dateOfBirth(playerDTO.getDateOfBirth())
-                .build();
-    }
-
-    public PlayerDTO mapToDtoWithoutTeams(Player player) {
-        return PlayerDTO.builder()
-                .id(player.getId())
-                .name(player.getName())
-                .patronymic(player.getPatronymic())
-                .surname(player.getSurname())
-                .university(player.getUniversity())
-                .dateOfBirth(player.getDateOfBirth())
+                .teams(player.getTeams().stream().map(x -> teamMainInfoFactory.mapToDto(x)).collect(Collectors.toList()))
                 .build();
     }
 }
